--- a/1.Deploy-spring-app/pom.xml
+++ b/1.Deploy-spring-app/pom.xml
@@ -53,8 +53,34 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.17.130</version>
+		</dependency>
 	</dependencies>
 
+	<profiles>
+            <profile>
+                <id>production</id>
+                    <build> 
+                            <plugins>
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-compiler-plugin</artifactId>
+                                    <configuration>
+                                       		<debug>false</debug> (4)
+                                            <optimize>true</optimize>
+                                    </configuration>
+                                </plugin>
+									<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+                            </plugins>
+                    </build>
+            </profile>
+    </profiles>
 	<build>
 		<plugins>
 			<plugin>
