WIP - Docker app

--- a/1.Contenedores-dockerizar-app/server/src/main/resources/application.properties
+++ b/1.Contenedores-dockerizar-app/server/src/main/resources/application.properties
@@ -15,6 +15,6 @@ quarkus.amqp.devservices.enabled=false
 
 quarkus.container-image.build=true
 quarkus.container-image.group=edufardo
-quarkus.container-image.name=server-pr-docker
+quarkus.container-image.name=server-pr-docker-test
 quarkus.container-image.tag=v1
 quarkus.container-image.push=true
