--- a/1.Contenedores-dockerizar-app/weatherservice/src/main/resources/application.properties
+++ b/1.Contenedores-dockerizar-app/weatherservice/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 quarkus.grpc.server.port = 9090
+
+quarkus.container-image.build=true
+quarkus.container-image.group=edufardo
+quarkus.container-image.name=weatherservice-pr-docker
+quarkus.container-image.tag=v1
+quarkus.container-image.push=true
