--- a/1.Contenedores-dockerizar-app/planner/pom.xml
+++ b/1.Contenedores-dockerizar-app/planner/pom.xml
@@ -134,6 +134,24 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+<groupId>com.google.cloud.tools</groupId>
+<artifactId>jib-maven-plugin</artifactId>
+<version>3.3.1</version>
+<configuration>
+<extraDirectories>
+<paths>
+<path>src/main/resources/scripts</path>
+</paths>
+<permissions>
+<permission>
+<file>/wait-for-it.sh</file>
+<mode>755</mode>
+</permission>
+</permissions>
+</extraDirectories>
+</configuration>
+</plugin>
 		</plugins>
 	</build>
 
